@@ -1,3 +1,9 @@
+2012-09-26  Joern Rennecke  <joern.rennecke@embecosm.com>
+
+	* contrib-list.mk (LIST): Remove arm-freebsd6, arm-linux,
+	arm-ecos-elf, arm-rtems, arm-elf and arm-wince-pe.
+	Use --enable-obsolete for picochip-elf.
+
 2012-09-10   Diego Novillo  <dnovillo@google.com>
 
 	* testsuite-management/x86_64-unknown-linux-gnu.xfail: Update.
